# marketplace-monitoring-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-lint.yml  build_lint_and_test.yml  code-quality.yml
docs/: Marketplace Monitoring Bot API.postman_collection.json  Marketplace Monitoring Bot.postman_collection.json  api.postman_collection.json  bot-commands.txt
scripts/: bot_locales_compile.sh  bot_locales_extract_messages.sh  format.sh  generate_api_key.py  lint.sh
src/: alembic.ini  scrapy.cfg  settings.py
src/api/: __main__.py
src/api/dependencies/: __init__.py  auth.py  database_provider.py  security.py
src/api/routers/: __init__.py  adverts.py  health.py  marketplaces.py  monitoring_runs.py  monitorings.py  users.py
src/api/routes/: __init__.py  search_query.py  search_task.py  user.py
src/api/schemas/: __init__.py  common.py  search_query.py  search_task.py  user.py
src/api/schemas/base/: __init__.py  schema_with_example.py
src/api/utils/: __init__.py  app.py  generate_postman_collection.py  validators.py
src/bot/: __main__.py  errors.py  utils.py
src/bot/locales/: messages.pot
src/bot/middlewares/: __init__.py  api_provider.py  i18n_provider.py  user_provider.py
src/bot/routers/: __init__.py  common.py  marketplaces.py  my_monitorings.py  new_monitoring.py  settings.py  start.py
src/bot/utils/: adverts.py  api.py  events.py  keyboards.py  time.py  validators.py
src/database/: __init__.py  database_dependency.py  database_provider.py  enums.py  env.py  provider.py  queries.py  script.py.mako
src/database/migrations/: env.py  script.py.mako  sql.py
src/database/migrations/versions/: 151821c9aac3_create_user_settings_table.py  22a0a13360b6_create_adverts_table.py  2c8d70452315_create_user_settings_table.py  30024b96ee2a_create_users_table.py  4eabf72ee590_create_marketplaces_table.py  (+20 more)
src/database/models/: __init__.py  advert.py  base.py  marketplace.py  monitoring.py  monitoring_run.py  search_query.py  search_task.py  user.py  user_settings.py
src/database/schemas/: __init__.py  advert.py  base.py  marketplace.py  monitoring.py  monitoring_run.py  user.py
src/database/versions/: 338fd2685515_create_adverts_table.py  4e958f8d945f_create_search_tasks_table.py  4f32c9f5092e_create_search_queries_table.py  8c95db9b5165_create_users_table.py
src/interfaces/: __init__.py  singleton_base.py
src/scrapers/: scrapy_settings.py  settings.py  utils.py
src/scrapers/core/: crawler.py
src/scrapers/crawlers/: __init__.py  base_advert_crawler.py  olx_ua_crawler.py  shafa_ua_crawler.py
src/scrapers/pipelines/: __init__.py  debug_save_advert_pipeline.py  filter_duplicate_advert_pipeline.py  publish_advert_pipeline.py
src/scrapers/spiders/: __init__.py  base_spider.py  olx_ua_spider.py
src/tasks/: __main__.py  dependencies.py  queues.py  worker.py
src/tasks/messages/: __init__.py  scraping_task.py
src/tasks/routers/: __init__.py  monitoring.py  scraping.py  trigger.py
src/utils/: enums.py  log.py
tests/: test.py  test_stub.py
(+11 files in other folders)
